--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.7",
     "fontawesome": "^5.6.3",
     "vue": "^3.5.17",
